--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "dependencies": {
     "q": "0.9.x",
     "lodash": "2.4.x",
-    "request": "2.30.x"
+    "request": "2.30.x",
+    "perror": "0.0.x"
   },
   "devDependencies": {
+    "smsframework": "0.0.x",
     "nodeunit": "0.8.2"
   },
   "engines": {
